ProjetCompil/Verif/Test/fail/typeNonCompatible1.cas
program
	D : integer;
begin
	D := not(D);
end.
	
